--- a/WeRead/app/src/main/res/layout/activity_library.xml
+++ b/WeRead/app/src/main/res/layout/activity_library.xml
@@ -7,14 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".Library">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Library"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true" />
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -26,6 +18,12 @@
         app:itemTextColor="@drawable/selector"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/menu_navigation" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/grid_item" />
 
 
 </RelativeLayout>
