--- a/WeRead/app/src/main/res/layout/activity_library.xml
+++ b/WeRead/app/src/main/res/layout/activity_library.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="?android:attr/windowBackground"
-        app:itemBackground="@color/white"
+        app:itemBackground="?attr/colorOnPrimary"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:labelVisibilityMode="unlabeled"
@@ -23,7 +23,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/grid_item" />
+        tools:listitem="@layout/grid_item_library" />
 
 
 </RelativeLayout>
