--- a/WeRead/app/src/main/res/layout/activity_splash_screen.xml
+++ b/WeRead/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashScreen"
-    android:background="#fff">
+    android:background="@drawable/gradient">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginEnd="120dp"
-        android:src="@drawable/ic_logo"
+        android:src="@drawable/ic_logo_white"
         android:transitionName="logo_image" />
-
 </androidx.appcompat.widget.ActionMenuView>
