--- a/WeRead/app/src/main/res/layout/grid_item_home.xml
+++ b/WeRead/app/src/main/res/layout/grid_item_home.xml
@@ -3,7 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,18 +14,37 @@
 
         <ImageView
             android:id="@+id/image_book"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="180dp"
             android:adjustViewBounds="true"
             android:layout_margin="10dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/dr_hujan"
+            android:layout_marginLeft="4dp"
+            android:layout_marginBottom="7dp"
+
             />
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hujan - Tere Liye"
+            android:layout_below="@+id/image_book"
+            android:textSize="16sp"
+            android:textAlignment="center"
             />
+
+<!--        <ImageView-->
+<!--            android:id="@+id/image_book"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:adjustViewBounds="true"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:src="@drawable/dr_hujan"-->
+<!--            />-->
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Hujan - Tere Liye"-->
+<!--            />-->
 
     </LinearLayout>
 
